--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,12 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : Open My Mind
 tagline: Site Tagline
 author :
   name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  email : proaben@hotmail.com
+  github : dearsherlock
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
