update index page
update index page

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ highlighter: pygments
 title : Open My Mind
 tagline: Site Tagline
 author :
-  name : Name Lastname
+  name : Sherlock Tsai
   email : proaben@hotmail.com
   github : dearsherlock
 
