update at home22

--- a/.Ulysses-Group.plist
+++ b/.Ulysses-Group.plist
@@ -11,6 +11,9 @@
 		<string>_posts</string>
 		<string>_site</string>
 		<string>assets</string>
+		<string>javascripts</string>
+		<string>images</string>
+		<string>stylesheets</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
