update_config to test

--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ highlighter: pygments
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : Sherlock Tsai
+  email : sherlock@cht.com.tw
+  github : dearsherlock
   twitter : username
   feedburner : feedname
 
