--- a/_posts/myprojects/screenshot_flickr_uploader/.Ulysses-Group.plist
+++ b/_posts/myprojects/screenshot_flickr_uploader/.Ulysses-Group.plist
@@ -2,13 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>childOrder</key>
-	<array>
-		<string>core-samples</string>
-		<string>opensource-km</string>
-		<string>myprojects</string>
-	</array>
 	<key>createMarkedFile</key>
 	<false/>
+	<key>sheetClusters</key>
+	<array>
+		<array>
+			<string>2014-09-22-Flickr Upload Image Using Python.md</string>
+		</array>
+	</array>
 </dict>
 </plist>
