--- a/_posts/myprojects/xaramin/.Ulysses-Group.plist
+++ b/_posts/myprojects/xaramin/.Ulysses-Group.plist
@@ -2,12 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>childOrder</key>
-	<array>
-		<string>screenshot_flickr_uploader</string>
-		<string>xaramin</string>
-	</array>
 	<key>createMarkedFile</key>
 	<false/>
+	<key>sheetClusters</key>
+	<array>
+		<array>
+			<string>2014-09-23-Xaramin Guide.md</string>
+		</array>
+	</array>
 </dict>
 </plist>
