--- a/_posts/myprojects/android/.Ulysses-Group.plist
+++ b/_posts/myprojects/android/.Ulysses-Group.plist
@@ -12,6 +12,12 @@
 		<array>
 			<string>2014-09-23-解決no_system_images_installed_for_this_target.md</string>
 		</array>
+		<array>
+			<string>2014-09-29-疑難雜誌(解決跳脫字元問題).md</string>
+		</array>
+		<array>
+			<string>2014-09-29-網路上人家已經寫好的技術文章.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
