--- a/_posts/opensource-km/jekyll/.Ulysses-Group.plist
+++ b/_posts/opensource-km/jekyll/.Ulysses-Group.plist
@@ -9,6 +9,9 @@
 		<array>
 			<string>2014-09-19-Mac Env Setting.md</string>
 		</array>
+		<array>
+			<string>2014-09-29-Trouble shotting(Fixing Actor crashed).md</string>
+		</array>
 	</array>
 </dict>
 </plist>
