--- a/_posts/myprojects/android/.Ulysses-Group.plist
+++ b/_posts/myprojects/android/.Ulysses-Group.plist
@@ -18,6 +18,12 @@
 		<array>
 			<string>2014-09-29-Developer Guide Links.md</string>
 		</array>
+		<array>
+			<string>2014-09-30-Android Unit explain.md</string>
+		</array>
+		<array>
+			<string>2014-09-30-Android Layout.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
