--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : facebook
     disqus :
       short_name : jekyllbootstrap
     livefyre :
@@ -86,8 +86,8 @@ JB :
     intensedebate :
       account : 123abc
     facebook :
-      appid : 123
-      num_posts: 5
+      appid : 134173986593131
+      num_posts: 100
       width: 580
       colorscheme: light
    
