增加申請blog comment教學

--- a/_posts/opensource-km/jekyll/.Ulysses-Group.plist
+++ b/_posts/opensource-km/jekyll/.Ulysses-Group.plist
@@ -12,6 +12,12 @@
 		<array>
 			<string>2014-09-29-Trouble shotting(Fixing Actor crashed).md</string>
 		</array>
+		<array>
+			<string>2014-10-01-jekyll bootstrap comments system.md</string>
+		</array>
+		<array>
+			<string>2014-10-01-jekyll bootstrap image css customize.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
