--- a/_posts/books/.Ulysses-Group.plist
+++ b/_posts/books/.Ulysses-Group.plist
@@ -2,14 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>childOrder</key>
-	<array>
-		<string>core-samples</string>
-		<string>opensource-km</string>
-		<string>myprojects</string>
-		<string>books</string>
-	</array>
 	<key>createMarkedFile</key>
 	<false/>
+	<key>sheetClusters</key>
+	<array>
+		<array>
+			<string>2014-10-05-books reading about a plus man.md</string>
+		</array>
+	</array>
 </dict>
 </plist>
