--- a/assets/js/min/.Ulysses-Group.plist
+++ b/assets/js/min/.Ulysses-Group.plist
@@ -7,19 +7,19 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>2014-09-19-Mac Env Setting.md</string>
+			<string>highlight.pack-ck.js</string>
 		</array>
 		<array>
-			<string>2014-09-29-Trouble shotting(Fixing Actor crashed).md</string>
+			<string>index-ck.js</string>
 		</array>
 		<array>
-			<string>2014-10-01-jekyll bootstrap comments system.md</string>
+			<string>jquery.fitvids-ck.js</string>
 		</array>
 		<array>
-			<string>2014-10-01-jekyll bootstrap image css customize.md</string>
+			<string>jquery.ghostHunter.min-ck.js</string>
 		</array>
 		<array>
-			<string>2014-10-06-Jekyll blog.md</string>
+			<string>readingTime.min-ck.js</string>
 		</array>
 	</array>
 </dict>
