--- a/.Ulysses-Group.plist
+++ b/.Ulysses-Group.plist
@@ -15,6 +15,8 @@
 		<string>images</string>
 		<string>stylesheets</string>
 		<string>_theme_packages</string>
+		<string>_sass</string>
+		<string>css</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
@@ -55,6 +57,9 @@
 		</array>
 		<array>
 			<string>tags.html</string>
+		</array>
+		<array>
+			<string>about.md</string>
 		</array>
 	</array>
 	<key>userIconName</key>
