activity傳值更新畫面

--- a/_posts/myprojects/android/.Ulysses-Group.plist
+++ b/_posts/myprojects/android/.Ulysses-Group.plist
@@ -24,6 +24,9 @@
 		<array>
 			<string>2014-09-30-Android Layout.md</string>
 		</array>
+		<array>
+			<string>2014-10-07-Android Activity pass value.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
