--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ author_bg:		  newyork.jpg
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:              http://localhost:4000
+url:              http://dearsherlock.github.io
 
 # Owner/author information
 owner:
   name:           Sherlock Tsai
-  avatar:         hmfaysal.jpg
+  avatar:         58674088@N00_r.jpg
   email:          proaben@Hotmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    MIT&#39;12 EECS Alum. UPenn&#39;15 ESE PhD Candidate. Hossain Mohammad Faysal is an Electrical Engineer and a Mathematician based in Philadelphia, Pennsylvania. His interests are anything that&#8217;s related to math, from math itself to programming languages to music to physics to engineering to philosophy.
