--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,12 @@ url:              http://dearsherlock.github.io
 owner:
   name:           Sherlock Tsai
   avatar:         58674088@N00_r.jpg
-  email:          proaben@Hotmail.com
+  email:          proaben@hotmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    MIT&#39;12 EECS Alum. UPenn&#39;15 ESE PhD Candidate. Hossain Mohammad Faysal is an Electrical Engineer and a Mathematician based in Philadelphia, Pennsylvania. His interests are anything that&#8217;s related to math, from math itself to programming languages to music to physics to engineering to philosophy.
+  description:    Nobody.^_____^
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        hmfaysal
-  facebook:       hmfaysal
-  github:         hmfaysal      
-  instagram:      hmfaysal
+  github:         dearsherlock      
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:    102602916593522619858
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:   
