--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-###add by new theme below   2014/10/08
-
 title:            Coding Nightmare
 description:      "Sherlock's Diary"
 locale:           en_US
@@ -16,7 +14,7 @@ author_bg:		  newyork.jpg
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:              ''
+url:              ""
 
 # Owner/author information
 owner:
@@ -24,13 +22,16 @@ owner:
   avatar:         58674088@N00_r.jpg
   email:          proaben@hotmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    Nobody.^_____^
-  # Social networking links used in footer. Update and remove as you like.
+  description:    Nobody...
+  twitter:        ""
+  facebook:       ""
   github:         dearsherlock      
+  instagram:      ""
   # For Google Authorship https://plus.google.com/authorship
+  google_plus:    ""
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
+google_analytics:    ""
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
@@ -200,7 +201,6 @@ prose:
           element: "checkbox"
           label: "Require JQuery?"
           value: false
-
 
 
 include: [".htaccess"]
