--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 title:            Coding Nightmare
 description:      "Sherlock's Diary"
 locale:           en_US
-logo:             logo.png
-disqus_shortname: hmfaysal
+logo:             kid.jpg
+disqus_shortname: ""
 share:            true
 readtime:		  true
 wpm:			  200
 dropcap:		  true
 theme:			  blue
 nprogress:        true
-header_bg:        newyork-streets.jpg
-author_bg:		  newyork.jpg
+header_bg:        homepage.jpg
+author_bg:		  mybackground.jpg
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
@@ -23,7 +23,7 @@ owner:
   email:          proaben@hotmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    Nobody...
-  twitter:        ""
+  twitter:        proaben
   facebook:       ""
   github:         dearsherlock      
   instagram:      ""
@@ -76,8 +76,8 @@ kramdown:
     coderay_css: class
 
 prose:
-  siteurl: 'http://hmfaysal.github.io/'
-  relativeLinks: 'http://hmfaysal.github.io/links.jsonp'
+  siteurl: 'http://dearsherlock.github.io/'
+  relativeLinks: 'http://dearsherlock.github.io/links.jsonp'
   media: 'images/post'
   metadata:
     _posts:
