--- a/_data/statuses.yml
+++ b/_data/statuses.yml
@@ -1,5 +1,5 @@
-- message: 更新樣板
-  date: 2014-08-08
+- message: 新增文章
+  date: 2014-10-07
 
-- message: 更新部落格
-  date: 2014-08-12
+- message: 更新版面樣式
+  date: 2014-10-08
