--- a/_posts/myprojects/xamarin/.Ulysses-Group.plist
+++ b/_posts/myprojects/xamarin/.Ulysses-Group.plist
@@ -7,7 +7,7 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>2014-09-23-Xaramin Guide.md</string>
+			<string>2014-09-23-Xamarin Guide.md</string>
 		</array>
 	</array>
 </dict>
