--- a/_posts/myprojects/android/.Ulysses-Group.plist
+++ b/_posts/myprojects/android/.Ulysses-Group.plist
@@ -27,6 +27,9 @@
 		<array>
 			<string>2014-10-07-Android Activity pass value.md</string>
 		</array>
+		<array>
+			<string>2014-10-09-how to use preference activity.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
