--- a/_posts/books/.Ulysses-Group.plist
+++ b/_posts/books/.Ulysses-Group.plist
@@ -9,6 +9,9 @@
 		<array>
 			<string>2014-10-05-books reading about a plus man.md</string>
 		</array>
+		<array>
+			<string>2014-10-09-how to imagize information.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
