--- a/_posts/myprojects/android/.Ulysses-Group.plist
+++ b/_posts/myprojects/android/.Ulysses-Group.plist
@@ -30,6 +30,9 @@
 		<array>
 			<string>2014-10-09-how to use preference activity.md</string>
 		</array>
+		<array>
+			<string>2014-10-14-trouble shotting(fixing package R does not exist).md</string>
+		</array>
 	</array>
 </dict>
 </plist>
