--- a/.Ulysses-Group.plist
+++ b/.Ulysses-Group.plist
@@ -15,6 +15,7 @@
 		<string>_data</string>
 		<string>_layouts</string>
 		<string>assets</string>
+		<string>sharedata</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
