new file and update article

--- a/_posts/myprojects/android/.Ulysses-Group.plist
+++ b/_posts/myprojects/android/.Ulysses-Group.plist
@@ -33,6 +33,9 @@
 		<array>
 			<string>2014-10-14-trouble shotting(fixing package R does not exist).md</string>
 		</array>
+		<array>
+			<string>2014-10-14-trouble shotting(Fix diamond operator is not supported).md</string>
+		</array>
 	</array>
 </dict>
 </plist>
