--- a/_posts/myprojects/xamarin/.Ulysses-Group.plist
+++ b/_posts/myprojects/xamarin/.Ulysses-Group.plist
@@ -9,6 +9,9 @@
 		<array>
 			<string>2014-09-23-Xamarin Guide.md</string>
 		</array>
+		<array>
+			<string>2014-10-15-TecgDays 2014 Xamarin Develop.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
