--- a/_posts/myprojects/googlechrome/.Ulysses-Group.plist
+++ b/_posts/myprojects/googlechrome/.Ulysses-Group.plist
@@ -9,6 +9,9 @@
 		<array>
 			<string>2014-10-15-how to fix plugin.md</string>
 		</array>
+		<array>
+			<string>2014-10-16-how to customize your flickr chrome tab.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
