--- a/_posts/opensource-km/jekyll/.Ulysses-Group.plist
+++ b/_posts/opensource-km/jekyll/.Ulysses-Group.plist
@@ -21,6 +21,9 @@
 		<array>
 			<string>2014-10-06-Jekyll blog.md</string>
 		</array>
+		<array>
+			<string>2014-10-16-modify css of my blog.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
