--- a/_posts/myprojects/googlechrome/.Ulysses-Group.plist
+++ b/_posts/myprojects/googlechrome/.Ulysses-Group.plist
@@ -12,6 +12,15 @@
 		<array>
 			<string>2014-10-16-how to customize your flickr chrome tab.md</string>
 		</array>
+		<array>
+			<string>2014-10-24-load background seq.md</string>
+		</array>
+		<array>
+			<string>2014-10-27-chrome command trigger.md</string>
+		</array>
+		<array>
+			<string>2014-10-28-chrome extension resource.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
