--- a/_posts/.Ulysses-Group.plist
+++ b/_posts/.Ulysses-Group.plist
@@ -7,6 +7,7 @@
 		<string>books</string>
 		<string>myprojects</string>
 		<string>opensource-km</string>
+		<string>life</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
