--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -13,7 +13,7 @@
 			<string>2014-10-28-buy vegitable.md</string>
 		</array>
 		<array>
-			<string>2014-10-30-(Update)Share My Flickr Favorite Photos.md</string>
+			<string>2014-10-30-Update_Share My Flickr Favorite Photos (1).md</string>
 		</array>
 	</array>
 </dict>
