--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -12,6 +12,9 @@
 		<array>
 			<string>2014-10-28-buy vegitable.md</string>
 		</array>
+		<array>
+			<string>2014-10-30-Update_Share My Flickr Favorite Photos.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
