add new article

--- a/_posts/.Ulysses-Group.plist
+++ b/_posts/.Ulysses-Group.plist
@@ -8,6 +8,7 @@
 		<string>myprojects</string>
 		<string>opensource-km</string>
 		<string>life</string>
+		<string>travel</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
