--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -15,6 +15,12 @@
 		<array>
 			<string>2014-10-30-Update_Share My Flickr Favorite Photos.md</string>
 		</array>
+		<array>
+			<string>2014-10-31-Update_Share My Flickr Favorite Photos.md</string>
+		</array>
+		<array>
+			<string>2014-11-03-toogl introduction.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
