--- a/_posts/myprojects/star_thermal_printer/.Ulysses-Group.plist
+++ b/_posts/myprojects/star_thermal_printer/.Ulysses-Group.plist
@@ -2,16 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>childOrder</key>
-	<array>
-		<string>jekyll</string>
-		<string>mdtool</string>
-		<string>balsamiq</string>
-		<string>bitbucket</string>
-		<string>office</string>
-		<string>qrcode</string>
-	</array>
 	<key>createMarkedFile</key>
 	<false/>
+	<key>sheetClusters</key>
+	<array>
+		<array>
+			<string>2014-11-05-starsdk to generate qrcode.md</string>
+		</array>
+		<array>
+			<string>2014-11-06-star control key.md</string>
+		</array>
+	</array>
 </dict>
 </plist>
