--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ author_bg:		  mybackground.jpg
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:              "http://dearsherlock.github.io/"
-
+#url:              "http://dearsherlock.github.io/"
+url:							 ""
 # Owner/author information
 owner:
   name:           Sherlock Tsai
