--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author_bg:		  mybackground.jpg
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
 #url:              "http://dearsherlock.github.io/"
-url:							 ""
+url:							 "http://dearsherlock.github.io"
 # Owner/author information
 owner:
   name:           Sherlock Tsai
