--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -10,6 +10,9 @@
 			<string>2014-10-20-hinet mms radio list.md</string>
 		</array>
 		<array>
+			<string>2014-11-13-kp at.md</string>
+		</array>
+		<array>
 			<string>2014-10-28-buy vegitable.md</string>
 		</array>
 		<array>
