--- a/_posts/myprojects/.Ulysses-Group.plist
+++ b/_posts/myprojects/.Ulysses-Group.plist
@@ -11,6 +11,7 @@
 		<string>googlechrome</string>
 		<string>companyculture</string>
 		<string>star_thermal_printer</string>
+		<string>safari extension</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
