--- a/_posts/myprojects/googlechrome/.Ulysses-Group.plist
+++ b/_posts/myprojects/googlechrome/.Ulysses-Group.plist
@@ -21,6 +21,9 @@
 		<array>
 			<string>2014-10-28-chrome extension resource.md</string>
 		</array>
+		<array>
+			<string>2014-11-12-clear chrome storage.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
