--- a/_posts/opensource-km/jekyll/.Ulysses-Group.plist
+++ b/_posts/opensource-km/jekyll/.Ulysses-Group.plist
@@ -24,6 +24,9 @@
 		<array>
 			<string>2014-10-16-modify css of my blog.md</string>
 		</array>
+		<array>
+			<string>2014-11-12-jekyll vs open graph.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
