--- a/_posts/myprojects/companyculture/.Ulysses-Group.plist
+++ b/_posts/myprojects/companyculture/.Ulysses-Group.plist
@@ -9,6 +9,9 @@
 		<array>
 			<string>2014-11-12-company_culture_reporting.md</string>
 		</array>
+		<array>
+			<string>2014-11-14-embedded product.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
