--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -24,6 +24,21 @@
 		<array>
 			<string>2014-11-03-toogl introduction.md</string>
 		</array>
+		<array>
+			<string>2014-11-27-Update_Share My Flickr Favorite Photos.md</string>
+		</array>
+		<array>
+			<string>2014-12-30-ccproxy.md</string>
+		</array>
+		<array>
+			<string>2014-12-30-github proxy.md</string>
+		</array>
+		<array>
+			<string>2015-01-11-convert audio.md</string>
+		</array>
+		<array>
+			<string>2015-01-21-smart city summit expo.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
