--- a/_posts/myprojects/.Ulysses-Group.plist
+++ b/_posts/myprojects/.Ulysses-Group.plist
@@ -12,6 +12,12 @@
 		<string>companyculture</string>
 		<string>star_thermal_printer</string>
 		<string>safari extension</string>
+		<string>asp.net mvc</string>
+		<string>azure</string>
+		<string>crack</string>
+		<string>mwc2014</string>
+		<string>pos</string>
+		<string>uml</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
