--- a/_posts/myprojects/googlechrome/.Ulysses-Group.plist
+++ b/_posts/myprojects/googlechrome/.Ulysses-Group.plist
@@ -24,6 +24,9 @@
 		<array>
 			<string>2014-11-12-clear chrome storage.md</string>
 		</array>
+		<array>
+			<string>2014-11-23-fixing chrome extension.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
