--- a/_posts/opensource-km/.Ulysses-Group.plist
+++ b/_posts/opensource-km/.Ulysses-Group.plist
@@ -10,6 +10,14 @@
 		<string>bitbucket</string>
 		<string>office</string>
 		<string>qrcode</string>
+		<string>crack</string>
+		<string>gradle</string>
+		<string>javascript</string>
+		<string>mac</string>
+		<string>network</string>
+		<string>sway</string>
+		<string>uml</string>
+		<string>untitled folder</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
