--- a/_posts/travel/.Ulysses-Group.plist
+++ b/_posts/travel/.Ulysses-Group.plist
@@ -9,6 +9,9 @@
 		<array>
 			<string>2014-11-08-okinawa travel.md</string>
 		</array>
+		<array>
+			<string>2014-11-15-okinawa travel customize.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
