--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -39,6 +39,12 @@
 		<array>
 			<string>2015-01-21-smart city summit expo.md</string>
 		</array>
+		<array>
+			<string>2015-02-04-ios to DFU.md</string>
+		</array>
+		<array>
+			<string>2015-2-14-Update_Share My Flickr Favorite Photos.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
