--- a/_posts/myprojects/.Ulysses-Group.plist
+++ b/_posts/myprojects/.Ulysses-Group.plist
@@ -18,6 +18,7 @@
 		<string>mwc2014</string>
 		<string>pos</string>
 		<string>uml</string>
+		<string>axure</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
