--- a/_posts/myprojects/companyculture/.Ulysses-Group.plist
+++ b/_posts/myprojects/companyculture/.Ulysses-Group.plist
@@ -12,6 +12,12 @@
 		<array>
 			<string>2014-11-14-embedded product.md</string>
 		</array>
+		<array>
+			<string>2015-03-02-company productability.md</string>
+		</array>
+		<array>
+			<string>2015-03-19-kai fu lee talk.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
