--- a/_posts/myprojects/pos/.Ulysses-Group.plist
+++ b/_posts/myprojects/pos/.Ulysses-Group.plist
@@ -33,6 +33,12 @@
 		<array>
 			<string>2015-01-26-ooa and er of design i18n product order org.md</string>
 		</array>
+		<array>
+			<string>2015-02-09-einvoice code tutorial.md</string>
+		</array>
+		<array>
+			<string>2015-03-02-einvoice sample.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
