--- a/_posts/myprojects/xamarin/.Ulysses-Group.plist
+++ b/_posts/myprojects/xamarin/.Ulysses-Group.plist
@@ -12,6 +12,15 @@
 		<array>
 			<string>2014-10-15-TecgDays 2014 Xamarin Develop.md</string>
 		</array>
+		<array>
+			<string>2015-03-18-xamarin with vs2015 shared project to cross platform app.md</string>
+		</array>
+		<array>
+			<string>2015-03-19-xamarin mvvmcross.md</string>
+		</array>
+		<array>
+			<string>2015-03-20-xamarin camera app.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
