--- a/_posts/opensource-km/.Ulysses-Group.plist
+++ b/_posts/opensource-km/.Ulysses-Group.plist
@@ -18,6 +18,7 @@
 		<string>sway</string>
 		<string>uml</string>
 		<string>untitled folder</string>
+		<string>software</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
