--- a/_posts/opensource-km/software/.Ulysses-Group.plist
+++ b/_posts/opensource-km/software/.Ulysses-Group.plist
@@ -7,10 +7,7 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>2015-01-27-asp net mvc.md</string>
-		</array>
-		<array>
-			<string>2015-03-02-Microsoft Virtual Academy vedeo subtitle.md</string>
+			<string>2015-03-20-ulysses2.md</string>
 		</array>
 	</array>
 </dict>
