--- a/_posts/travel/.Ulysses-Group.plist
+++ b/_posts/travel/.Ulysses-Group.plist
@@ -12,6 +12,21 @@
 		<array>
 			<string>2014-11-15-okinawa travel customize.md</string>
 		</array>
+		<array>
+			<string>2015-02-12-okinawa day1 guide.md</string>
+		</array>
+		<array>
+			<string>2015-02-13-okinawa day2 guide.md</string>
+		</array>
+		<array>
+			<string>2015-02-13-okinawa day3 guide.md</string>
+		</array>
+		<array>
+			<string>2015-02-13-okinawa day4 guide.md</string>
+		</array>
+		<array>
+			<string>2015-02-13-okinawa day5 guide.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
