--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -45,6 +45,30 @@
 		<array>
 			<string>2015-2-14-Update_Share My Flickr Favorite Photos.md</string>
 		</array>
+		<array>
+			<string>2015-02-14-Update_Share My Flickr Favorite Photos.md</string>
+		</array>
+		<array>
+			<string>2015-04-17-clean play history.md</string>
+		</array>
+		<array>
+			<string>2015-05-07-lean and kanban.md</string>
+		</array>
+		<array>
+			<string>2015-05-13-iot.md</string>
+		</array>
+		<array>
+			<string>report of hicloud.md</string>
+		</array>
+		<array>
+			<string>演藝圈狗腿.md</string>
+		</array>
+		<array>
+			<string>2015-05-20-design thinking.md</string>
+		</array>
+		<array>
+			<string>2015-05-28-usage pulltorefresharp.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
