--- a/_posts/myprojects/azure/.Ulysses-Group.plist
+++ b/_posts/myprojects/azure/.Ulysses-Group.plist
@@ -24,6 +24,9 @@
 		<array>
 			<string>2015-01-26-azure web site.md</string>
 		</array>
+		<array>
+			<string>2015-05-28-docker tutorial.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
