--- a/_posts/myprojects/companyculture/.Ulysses-Group.plist
+++ b/_posts/myprojects/companyculture/.Ulysses-Group.plist
@@ -18,6 +18,9 @@
 		<array>
 			<string>2015-03-19-kai fu lee talk.md</string>
 		</array>
+		<array>
+			<string>2015-03-26-7 step to crash project.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
