--- a/_posts/myprojects/android/.Ulysses-Group.plist
+++ b/_posts/myprojects/android/.Ulysses-Group.plist
@@ -93,6 +93,18 @@
 		<array>
 			<string>2015-03-18-xamarin ios dismiss keyboard.md</string>
 		</array>
+		<array>
+			<string>2015-03-23-android download.md</string>
+		</array>
+		<array>
+			<string>2015-03-24-android_mvp_pattern.md</string>
+		</array>
+		<array>
+			<string>2015-03-30-android dagger pattern.md</string>
+		</array>
+		<array>
+			<string>2015-03-31-android features.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
