--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -69,6 +69,15 @@
 		<array>
 			<string>2015-05-28-usage pulltorefresharp.md</string>
 		</array>
+		<array>
+			<string>2015-05-29-report of hicloud.md</string>
+		</array>
+		<array>
+			<string>2015-07-08-action behavior chap1.md</string>
+		</array>
+		<array>
+			<string>2015-07-08-action behavior chap2.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
