--- a/_posts/myprojects/.Ulysses-Group.plist
+++ b/_posts/myprojects/.Ulysses-Group.plist
@@ -20,6 +20,7 @@
 		<string>uml</string>
 		<string>axure</string>
 		<string>amazon</string>
+		<string>mongo</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
