--- a/_posts/myprojects/asp.net mvc/.Ulysses-Group.plist
+++ b/_posts/myprojects/asp.net mvc/.Ulysses-Group.plist
@@ -12,6 +12,24 @@
 		<array>
 			<string>2015-03-02-Microsoft Virtual Academy vedeo subtitle.md</string>
 		</array>
+		<array>
+			<string>2015-06-01-aspnet5.md</string>
+		</array>
+		<array>
+			<string>2015-06-06-build web api using mvc6 and mongodb.md</string>
+		</array>
+		<array>
+			<string>2015-06-11-asp.net_5 k.md</string>
+		</array>
+		<array>
+			<string>2015-06-19-net history.md</string>
+		</array>
+		<array>
+			<string>2015-06-22-event delegate and labmda.md</string>
+		</array>
+		<array>
+			<string>2015-06-23-url map.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
