--- a/_posts/myprojects/azure/.Ulysses-Group.plist
+++ b/_posts/myprojects/azure/.Ulysses-Group.plist
@@ -27,6 +27,12 @@
 		<array>
 			<string>2015-05-28-docker tutorial.md</string>
 		</array>
+		<array>
+			<string>2015-05-29-web api.md</string>
+		</array>
+		<array>
+			<string>docker and caas.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
