--- a/_posts/myprojects/mongo/.Ulysses-Group.plist
+++ b/_posts/myprojects/mongo/.Ulysses-Group.plist
@@ -7,13 +7,7 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>2014-11-21-hack astah 6.9.md</string>
-		</array>
-		<array>
-			<string>2015-06-04-hack imoc.md</string>
-		</array>
-		<array>
-			<string>2015-06-05-pinin.md</string>
+			<string>2015-06-05-mongodb.md</string>
 		</array>
 	</array>
 </dict>
