--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -78,6 +78,12 @@
 		<array>
 			<string>2015-07-08-action behavior chap2.md</string>
 		</array>
+		<array>
+			<string>2015-07-14-action behavior chap3.md</string>
+		</array>
+		<array>
+			<string>2015-07-14-action behavior chap4.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
