--- a/_posts/myprojects/.Ulysses-Group.plist
+++ b/_posts/myprojects/.Ulysses-Group.plist
@@ -21,6 +21,7 @@
 		<string>axure</string>
 		<string>amazon</string>
 		<string>mongo</string>
+		<string>udo</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
