--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -84,6 +84,12 @@
 		<array>
 			<string>2015-07-14-action behavior chap4.md</string>
 		</array>
+		<array>
+			<string>2015-07-22-action behavior chap5.md</string>
+		</array>
+		<array>
+			<string>2015-07-22-action behavior chap6.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
