--- a/_posts/life/.Ulysses-Group.plist
+++ b/_posts/life/.Ulysses-Group.plist
@@ -90,6 +90,9 @@
 		<array>
 			<string>2015-07-22-action behavior chap6.md</string>
 		</array>
+		<array>
+			<string>2015-07-29-tainan vacation Day1.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
