--- a/_posts/myprojects/.Ulysses-Group.plist
+++ b/_posts/myprojects/.Ulysses-Group.plist
@@ -22,6 +22,7 @@
 		<string>amazon</string>
 		<string>mongo</string>
 		<string>udo</string>
+		<string>usability training</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
