--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Coding Nightmare
 description:      "Sherlock's Diary"
-locale:           zh_Hans_TW
+locale:           zh_TW
 logo:             kid.jpg
 disqus_shortname: ""
 share:            true
