--- a/.Ulysses-Group.plist
+++ b/.Ulysses-Group.plist
@@ -18,7 +18,370 @@
 		<string>sharedata</string>
 	</array>
 	<key>createMarkedFile</key>
-	<false/>
+	<integer>0</integer>
+	<key>resolutionData</key>
+	<dict>
+		<key>childOrder</key>
+		<dict>
+			<key>_data</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>_drafts</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14915901</real>
+				<key>lastModification</key>
+				<real>507375647.14915901</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>_includes</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>_layouts</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>_posts</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>_site</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>_theme_packages</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14919698</real>
+				<key>lastModification</key>
+				<real>507375647.14919698</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>assets</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>images</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>javascripts</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14917302</real>
+				<key>lastModification</key>
+				<real>507375647.14917302</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>sharedata</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>stylesheets</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.149185</real>
+				<key>lastModification</key>
+				<real>507375647.149185</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+		</dict>
+		<key>createMarkedFile</key>
+		<real>448548684</real>
+		<key>sheetClusters</key>
+		<dict>
+			<key>404.html</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14858598</real>
+				<key>lastModification</key>
+				<real>507375647.14858598</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>404.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>History.markdown</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14865398</real>
+				<key>lastModification</key>
+				<real>507375647.14865398</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>Hossain Mohd Faysal.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>README.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>about.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>archive.html</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14860201</real>
+				<key>lastModification</key>
+				<real>507375647.14860201</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>atom.xml</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.148615</real>
+				<key>lastModification</key>
+				<real>507375647.148615</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>categories.html</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14862901</real>
+				<key>lastModification</key>
+				<real>507375647.14862901</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>changelog.md</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.148642</real>
+				<key>lastModification</key>
+				<real>507375647.148642</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>index.md</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14866602</real>
+				<key>lastModification</key>
+				<real>507375647.14866602</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>pages.html</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.148678</real>
+				<key>lastModification</key>
+				<real>507375647.148678</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>rss.xml</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14868999</real>
+				<key>lastModification</key>
+				<real>507375647.14868999</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>sitemap.txt</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14870203</real>
+				<key>lastModification</key>
+				<real>507375647.14870203</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>status-updates.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+			<key>tags.html</key>
+			<dict>
+				<key>explicitUnassignment</key>
+				<true/>
+				<key>firstUnassignment</key>
+				<real>507375647.14871299</real>
+				<key>lastModification</key>
+				<real>507375647.14871299</real>
+				<key>version</key>
+				<dict>
+					<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+					<integer>2</integer>
+				</dict>
+			</dict>
+			<key>update-log.md</key>
+			<dict>
+				<key>lastModification</key>
+				<real>448548684</real>
+				<key>version</key>
+				<dict>
+					<key>legacy-448548684.000000</key>
+					<integer>1</integer>
+				</dict>
+			</dict>
+		</dict>
+		<key>userIconName</key>
+		<real>448548684</real>
+	</dict>
 	<key>sheetClusters</key>
 	<array>
 		<array>
@@ -73,7 +436,32 @@
 			<string>update-log.md</string>
 		</array>
 	</array>
+	<key>storeFormatVersion</key>
+	<integer>1</integer>
 	<key>userIconName</key>
 	<string>Folder</string>
+	<key>versioning</key>
+	<dict>
+		<key>childOrder</key>
+		<dict>
+			<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+			<integer>2</integer>
+		</dict>
+		<key>createMarkedFile</key>
+		<dict>
+			<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+			<integer>1</integer>
+		</dict>
+		<key>sheetClusters</key>
+		<dict>
+			<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+			<integer>2</integer>
+		</dict>
+		<key>userIconName</key>
+		<dict>
+			<key>2d59544d7ab29cdfaa986f3e518c073456385a409b1c3d4948db814cc0241f96</key>
+			<integer>1</integer>
+		</dict>
+	</dict>
 </dict>
 </plist>
