--- a/_posts/opensource-km/.Ulysses-Group.plist
+++ b/_posts/opensource-km/.Ulysses-Group.plist
@@ -19,6 +19,8 @@
 		<string>uml</string>
 		<string>untitled folder</string>
 		<string>software</string>
+		<string>tvos</string>
+		<string>uxdesign</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
