--- a/_posts/myprojects/udo/.Ulysses-Group.plist
+++ b/_posts/myprojects/udo/.Ulysses-Group.plist
@@ -9,6 +9,12 @@
 		<array>
 			<string>2015-07-20-why vs online.md</string>
 		</array>
+		<array>
+			<string>2016-01-06-Framer Present.md</string>
+		</array>
+		<array>
+			<string>2016-01-07-framer import ps.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
