--- a/_posts/opensource-km/network/.Ulysses-Group.plist
+++ b/_posts/opensource-km/network/.Ulysses-Group.plist
@@ -9,6 +9,9 @@
 		<array>
 			<string>2014-11-24-asus network in company.md</string>
 		</array>
+		<array>
+			<string>2016-02-05-yahoo flury.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
