--- a/_posts/opensource-km/tvos/.Ulysses-Group.plist
+++ b/_posts/opensource-km/tvos/.Ulysses-Group.plist
@@ -2,21 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>childOrder</key>
-	<array>
-		<string>books</string>
-		<string>myprojects</string>
-		<string>opensource-km</string>
-		<string>life</string>
-		<string>travel</string>
-		<string>design</string>
-	</array>
 	<key>createMarkedFile</key>
 	<false/>
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>2014-12-20-monitor Pixel Density.md</string>
+			<string>2016-05-13-tvml tutorial.md</string>
+		</array>
+		<array>
+			<string>2016-05-19-tvml tutorial_2.md</string>
+		</array>
+		<array>
+			<string>2016-05-19-tvml tutorial_3.md</string>
 		</array>
 	</array>
 </dict>
