--- a/sharedata/FinalTable_TimeRemain.framer/framer/config.json
+++ b/sharedata/FinalTable_TimeRemain.framer/framer/config.json
@@ -7,7 +7,7 @@
   "cachedDeviceWidth" : 1920,
   "fullScreen" : false,
   "deviceType" : "dell-xps",
-  "sharedPrototype" : 0,
+  "sharedPrototype" : true,
   "propertyPanelToggleStates" : {
 
   },
@@ -17,8 +17,8 @@
   "showBezel" : true,
   "foldedCodeRanges" : [
     "{1668, 616}",
-    "{2426, 613}",
-    "{3055, 835}"
+    "{2705, 613}",
+    "{3334, 835}"
   ],
   "deviceScale" : "fit"
 }
