--- a/_config.yml
+++ b/_config.yml
@@ -1,208 +1,50 @@
-title:            Coding Nightmare
-description:      "Sherlock's Diary"
-locale:           zh_TW
-logo:             kid.jpg
-disqus_shortname: ""
-share:            true
-readtime:		  true
-# 文章下方會提示讀者本篇文章會讀多久，目前設定每分鐘讀200字
-wpm:			  100
-dropcap:		  true
-theme:			  minima
-nprogress:        true
-header_bg:        homepage.jpg
-author_bg:		  mybackground.jpg
-# Change url to your domain. Leave localhost server or blank when working locally.
-# or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
-# whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-#url:              "http://dearsherlock.github.io/"
-url:							 "http://dearsherlock.github.io"
-# Owner/author information
-owner:
-  name:           Sherlock Tsai
-  avatar:         58674088@N00_r.jpg
-  email:          proaben@hotmail.com
-  # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    Nobody...
-  twitter:        proaben
-  facebook:       ""
-  github:         dearsherlock      
-  instagram:      ""
-  # For Google Authorship https://plus.google.com/authorship
-  google_plus:    ""
+# Site
+name: "User Experience Design Office"
+description: "不設計，毋寧死"
+meta_description: "Jekyll template, Medium styled, free for bloggers."
+logo: 'assets/images/logo.png'
+favicon: 'assets/images/logo.png'
+url:     'http://udo.nctu.me'
+#baseurl: /mediumish-theme-jekyll
+google_analytics: 'UA-63838656-1'
+#disqus: 'demowebsite'
+mailchimp-list: 'https://cht.us19.list-manage.com/subscribe?u=8a08b1f2d7d9ea67880a0ee38&id=cb9be09bf6'
+# Authors
+authors:
+  sherlock:
+    name: Sherlock
+    display_name: Sherlock
+    gravatar: 70ba0df8e3d086bd4ef10e6c331a1f5f
+    email: tw.sherlock@gmail.com
+    web: http://dearsherlock.github.io/
+    twitter: https://medium.com/@proaben
+    description: "UDO 部落格專欄作家。專長互動設計、數據分析、系統架構。"
+  john:
+    name: John
+    display_name: John
+    gravatar: b1cc14991db7a456fcd761680bbc8f81
+    email: wowthemesnet@gmail.com
+    web: https://www.wowthemes.net
+    twitter: https://twitter.com/wowthemesnet
+    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
 
-# Analytics and webmaster tools stuff goes here
-google_analytics:    "UA-63838656-1"
-google_verify:      
-# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:         
-
-# Links to include in footer navigation
-# For external links add external: true
-links:
-  - title: Home
-    url: /
-    external: false
-    icon: home
-  - title: Featured Posts
-    url: /featured
-  - title: Categories
-    url: /categories
-  - title: About
-    url: /about
-
-# http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    Asia/Taipei
-future:      true
-highlighter: pygments
-markdown:    kramdown
-paginate:    10
-paginate_path: "page:num"
-
-# https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title
-
-kramdown:
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  use_coderay: false
-
-  coderay:
-    coderay_line_numbers: 
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: class
-
-prose:
-  siteurl: 'http://dearsherlock.github.io/'
-  relativeLinks: 'http://dearsherlock.github.io/links.jsonp'
-  media: 'images/post'
-  metadata:
-    _posts:
-      - name: "published"
-        field:
-          label: "Published"
-          element: "checkbox"
-          value: "true"
-      - name: "layout"
-        field:
-          element: "hidden"
-          label: "Layout"
-          value: "post"
-      - name: "title"
-        field:
-          label: "Title"
-          element: "text"
-          value: "An Awesome Headline!"
-      - name: "description"
-        field:
-          element: "text"
-          label: "Description"
-          placeholder: "Enter Post Description"
-      - name: "modified"
-        field:
-          element: "text"
-          label: "Has this page been modified?"
-          placeholder: "YYYY-MM-DD"
-      - name: "categories"
-        field:
-          element: "multiselect"
-          label: "Add categories"
-          placeholder: "Choose categories"
-          value: personal
-          options:
-            - name: "Personal"
-              value: personal
-            - name: "Engineering"
-              value: engineering
-            - name: "Mathematics"
-              value: mathematics
-            - name: "Physics"
-              value: physics
-            - name: "Psychology"
-              value: psychology
-            - name: "Photography"
-              value: photography
-            - name: "Interesting"
-              value: interesting
-            - name: "Web-Development"
-              value: webdevelopment
-          alterable: true
-      - name: "tags"
-        field:
-          element: "text"
-          label: "Tags"
-          placeholder: "Enter tags, separated by spaces"
-      - name: "imagefeature"
-        field:
-          element: "text"
-          label: "Featured Image"
-          placeholder: "somefile.jpg"
-      - name: "covereffect"
-        field:
-          element: "select"
-          label: "Select Cover Effect"
-          placeholder: "Choose Type"
-          value:
-          options:
-            - name: "None"
-              value: 
-            - name: "slice"
-              value: slice
-            - name: "push"
-              value: push
-      - name: "location"
-        field:
-          element: "text"
-          label: "Location"
-          placeholder: "Some Place"
-      - name: "locationgps"
-        field:
-          element: "text"
-          label: "Location GPS point"
-          placeholder: "long, lat"
-      - name: "mathjax"
-        field:
-          element: "checkbox"
-          label: "MathJax"
-          value: false
-      - name: "featured"
-        field:
-          element: "checkbox"
-          label: "Featured?"
-          value: false
-      - name: "comments"
-        field:
-          element: "checkbox"
-          label: "Comments"
-          value: false
-      - name: "chart"
-        field:
-          element: "checkbox"
-          label: "Chart?"
-          value: false
-      - name: "charttype"
-        field:
-          element: "select"
-          label: "Select Chart Type"
-          placeholder: "Choose Type"
-          value:
-          options:
-            - name: "None"
-              value: 
-            - name: "pie"
-              value: pie
-            - name: "serial"
-              value: serial
-      - name: "jquery"
-        field:
-          element: "checkbox"
-          label: "Require JQuery?"
-          value: false
-
-
-include: [".htaccess"]
-exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
+# Plugins
+plugins: 
+  - jekyll-paginate
+  - jekyll-archives
+    
+# Archives
+jekyll-archives:
+  enabled:
+    - categories
+  layout: archive
+  permalinks:
+    category: '/category/:name/'
+    
+# Pagination 
+paginate: 6
+paginate_path: /page:num/
+    
+# Other
+markdown: kramdown
+highlighter: rouge
