--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,10 @@ authors:
 plugins: 
   - jekyll-paginate
   - jekyll-archives
-    
+  # - jekyll-sitemap
+  # - jekyll-paginate 
+  # - jekyll-gist
+
 # Archives
 jekyll-archives:
   enabled:
@@ -40,7 +43,8 @@ jekyll-archives:
   layout: archive
   permalinks:
     category: '/category/:name/'
-    
+gist:
+  noscript: false    
 # Pagination 
 paginate: 6
 paginate_path: /page:num/
